# cwm-iac

./: LICENSE  README.md  pyproject.toml
.github/workflows/: argocd-sync.yaml  argocd_plugin.yaml  docker-minio-log-metrics-ci.yaml  docker-openresty-ci.yaml  docker-prometheus-nagios-checks-sender-ci.yaml  terraform.py  terraform.yaml
actions/argocd-sync/: action.yaml
actions/clusters-env/: action.yaml
actions/deploy/: action.yaml
actions/docker-build-push/: action.yaml
actions/vault/: action.yaml
actions/wait-for-deployment/: action.py  action.yaml
apps/argocd/: README.md  argocd-cm.yaml  argocd-repo-server-rbac.yaml  ingress-grpc.yaml  ingress-https.yaml  kustomization.yaml  patch-argocd-application-controller-deployment.yaml  patch-argocd-applicationset-controller-deployment.yaml  patch-argocd-dex-server-deployment.yaml  patch-argocd-redis-deployment.yaml  patch-argocd-repo-server-deployment.yaml  patch-argocd-server-deployment.yaml
apps/argocd-apps/: README.md
apps/cdn-api/: Chart.yaml  values.yaml
apps/cdn-cache/: Chart.yaml  values.yaml
apps/cdn-edge/: Chart.yaml  values.yaml
apps/cert-manager/: README.md  cluster-issuer.yaml  install.yaml  kustomization.yaml  patch-cert-manager-cainjector-deployment.yaml  patch-cert-manager-deployment.yaml  patch-cert-manager-webhook-deployment.yaml
apps/cloudnative-pg/: Chart.yaml  (+1 more)
argocd_plugin/: Dockerfile  requirements.dev1.txt  requirements.dev2.txt  requirements.txt  setup.py
cwm_iac/: cli.py  utils.py
tests/: test_cdn_api_helpers.py  test_cdn_runtime_wiring_iac.py  test_cdn_tenant_tls_iac.py
(+303 files in other folders)
