[project]
name = "cwm-iac"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
    "click>=8.4.1",
    "prometheus-client>=0.23.1",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
cwm-iac = "cwm_iac.cli:main"
